evening major edit from TeaDoves-MacBook-Air-M4.local

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     restart: always
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: DockerfileBackend
     ports:
       - "8080:8080"
     volumes:
