evening minor edit from TeaDoves-MacBook-Air-M4.local

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-.data
+#.data
+!.data/.gitkeep
+
 bootstrap
 
 # If you prefer the allow list template instead of the deny list, see community template:
